force-app/main/default/objects/ESS_Master_Hotel_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Files__c</fullName>
        <label>Attachment Files</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_JSON__c</fullName>
        <label>Contact JSON</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Telephone__c</fullName>
        <label>Contact Telephone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_1_Charge_Employee__c</fullName>
        <label>Guest 1 Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_1_Contract_Rate__c</fullName>
        <label>Guest 1 Contract Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_2_Charge_Employee__c</fullName>
        <label>Guest 2 Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_2_Contract_Rate__c</fullName>
        <label>Guest 2 Contract Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Website__c</fullName>
        <label>Hotel Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Map__c</fullName>
        <label>Link Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twin_Bed_Charge_Employee__c</fullName>
        <label>Twin Bed Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twin_Bed_Contract_Rate__c</fullName>
        <label>Twin Bed Contract Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>ESS Master Hotel Booking</label>
    <nameField>
        <label>Hotel ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>